# FEUP-ROBO-Mapping

./: CMakeLists.txt  README.md  package.xml  vars.config
include/: mapping.h  node.h  point.h  room.h  utilities.h
src/: main.cpp  mapping.cpp
stdr_files/stdr_launchers/launch/: jpmsc_mapping_1.launch  jpmsc_mapping_2.launch  jpmsc_mapping_3.launch  jpmsc_mapping_few_lasers_1.launch  jpmsc_mapping_few_lasers_2.launch  jpmsc_mapping_few_lasers_3.launch
stdr_files/stdr_resources/maps/jpmsc_mapping/: rooms_1.yaml  rooms_2.yaml  rooms_3.yaml
stdr_files/stdr_resources/resources/robots/jpmsc_mapping/: jpmsc_mapping.yaml  jpmsc_mapping_few_lasers.yaml
