<?xml version="1.0"?>
<package>
  <name>jpmsc_mapping</name>
  <version>0.0.1</version>
  <description>The jpmsc_mapping package</description>

  <maintainer email="jpmsc91@hotmail.com">João Cardoso</maintainer>

  <license>GPLv3</license>

  <url type="repository"></url>

  <author>João Cardoso</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>stdr_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>


  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>stdr_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <export>
  </export>

</package>
